# funding-rate-arbitrage

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
docs/: monitoring.md
src/: __init__.py  backtest.py  config.py  main.py  run_backtest.py
src/api/: health_check.py
src/exchanges/: base_exchange.py  binance_exchange.py  bybit_exchange.py
src/execution/: arbitrage_calculator.py  execution_engine.py
src/models/: data_models.py
src/risk/: risk_manager.py
tests/: test_arbitrage_calculator.py  test_risk_manager.py
